@@ -15,7 +15,6 @@ import static seedu.address.testutil.TypicalPersons.FIONA;
 
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
@@ -85,7 +84,7 @@ public class FindCommandTest {
         PersonMatchesFieldsPredicate predicate = new PersonMatchesFieldsPredicate(
                 Collections.emptyList(),
                 Collections.emptyList(),
-                List.of("example.com", "xxx"),
+                Collections.singletonList("example.com"),
                 Collections.emptyList(),
                 Collections.singletonList("friends"));
         FindCommand command = new FindCommand(predicate);
